<package format="2">
  <name>Vzense_ROS_Plugin_Linux</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for mirobot_urdf_2</p>
    <p>This package contains configuration data, 3D models and launch files
for mirobot_urdf_2 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>



  <depend>roslaunch</depend>
  <depend>rviz</depend>
  <depend>serial</depend>


  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>opencv2</build_export_depend>
  <build_export_depend>camera_info_manager</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>



</package>
